<resources>
    <string name="app_name">UI Demons</string>
    <string name="BtnToPickerContent">Picker demo</string>
    <string name="BtnToEditTextContent">EditText demo</string>
    <string name="BtnToSlidersContent">Sliders demo</string>
    <string name="BtnPickerViewOkay">OK</string>
    <string name="BtnPickerViewCancel">CANCEL</string>
    <string name="TextViewPickerResult">Value selected:</string>
    <string name="TextViewMainSliderResult">Slider result:</string>
    <string name="TextViewMainEditTextResult">EditText result:</string>
    <string name="TextViewMainPickerResult">Picker result:</string>
    <string name="FramePicker">Picker Demo</string>
    <string name="TextViewSliderRes">0</string>
    <string name="TextViewPickerRes">0</string>
    <string name="TextViewEditTextRes">0</string>
</resources>
